fixed overflow now working and reverted inputs to document

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -35,5 +35,5 @@ img {
 
 html {
 	overflow-y: scroll;
-	height: 101vh;
+	/* height: 101vh; */
 }
